# ocean-freight-data-architecture

./: .env.template  .gitignore  CLAUDE.md  Makefile  README.md  criticality.golden.json  pyproject.toml  synthetic.sha256  vercel.json
.github/workflows/: secret-gate.yml
.planning/: PROJECT.md
analytics/: __init__.py  route_reliability.py  run_criticality.py  snapshot_uc.py  uc3_closure.py  uc4_reroute.py
aql/: uc3_chokepoint_share.aql  uc3_chokepoint_share.explain.txt  uc3_closure_unreachable.aql  uc3_closure_unreachable.explain.txt  uc3_reroute_impact.aql  uc3_reroute_impact.explain.txt  uc4_reroute_shortest_path.aql  uc4_reroute_shortest_path.explain.txt
dags/: ofa_warehouse_dag.py
data/golden/: uc1.golden.json  uc2.golden.json  uc3.golden.json  uc4.golden.json
data_gen/: __init__.py  bookings.py  conditioning.py  container_events.py  network.py  schedules.py
docs/: 07-RECORD-BACKUP.md  DRESS-REHEARSAL.md  M4-CHECKLIST.md  RUN-FROM-CLONE.md  demo.ipynb
docs/deck/: SLIDES-M1-M2.md  SLIDES-M3-FINAL.md  er-diagrams-latex.txt  final-presentation.md  m1-billing-guard.md  m1-real-vs-synthetic.md  m1-source-inventory.md  m1-team-domain.md  m1-use-cases.md  m2-arango-graph.md  m2-bq-star.md  m2-conformed-keys.md  m2-er-logical.md  m2-gap-analysis.md  m2-star-vs-snowflake.md  m3-pitch.md
docs/team-materials/: cheatsheet.md  data-sources-spoken.md  datasets.md  m3-pitch-talking-points.md  m3-spoken-answers.md  schema-written.md
ingest/: pull_ais.py  pull_priors.py  pull_reference.py
lib/: arango_client.py  gcs.py  graph_loader.py  graph_queries.py  jsonl.py  seeds.py
reference/: chokepoints.csv
scripts/: _build_demo_nb.py  freeze_criticality.py  freeze_uc.py  generate.py  load_bronze.py  verify.py  verify_cluster.py  verify_m1.sh  xstore.py
silver/: conform.py  derive.py  geofence.py  haversine.py  identity.py  imo.py  land_silver.py
sql/: ddl_star.sql  merge_dim_carrier.sql  merge_dim_vessel.sql  uc1_eta_reliability.sql  uc2_dwell_trend.sql
tests/: conftest.py  test_arango_load.py  test_conditioning.py  test_conform.py  test_criticality.py  test_cross_store.py  test_dag.py  test_derive.py  test_generators.py  test_geofence.py  test_haversine.py  test_identity.py  test_imo.py  test_lib.py  test_load_bronze.py  test_load_silver.py  test_merge_scd2.py  test_pull_ais.py  test_pull_priors.py  test_pull_reference.py  test_route_reliability.py  test_silver_operated_by.py  test_uc3_closure.py  test_uc3_reroute_impact.py  test_uc4_reroute.py
web/: .gitignore  next.config.ts  package-lock.json  package.json  vitest.config.ts
web/app/: globals.css  layout.tsx  page.tsx
web/app/api/uc1/: route.ts
web/app/api/uc2/: route.ts
web/app/api/uc3/: route.ts
web/app/api/uc4/: route.ts
web/app/uc1/: page.tsx
web/app/uc2/: page.tsx
web/app/uc3/: page.tsx
web/app/uc4/: page.tsx
web/components/: uc-card.tsx  uc-chart.tsx  uc-control-bar.tsx  uc-dashboard.tsx  uc-data-table.tsx  uc-header.test.tsx  uc-header.tsx  uc-map.tsx  uc-stub.tsx  uc3-map-loader.tsx  uc3-summary.tsx  uc4-map-loader.tsx  uc4-summary.tsx
web/lib/: arango.test.ts  arango.ts  bigquery.test.ts  bigquery.ts  coords.test.ts  coords.ts  criticality.test.ts  criticality.ts  golden-types.ts  map-colors.ts  page-fetcher.test.ts  page-fetcher.ts  page-provenance.test.ts  route-cache-config.test.ts  serve.ts  uc4-trip.test.ts  uc4-trip.ts  use-cases.ts
web/scripts/: copy-server-assets.mjs
