# Ocean Freight Forwarder Data Architecture (MSDS 683) — Python build config.
# Single source of truth for dependencies + Python version pin.
# Provenance: .planning/phases/03-ingestion-bronze/03-PLAN.md Task 1; 03-RESEARCH.md
# § Standard Stack Installation; CLAUDE.md prescriptive stack.
#
# DETERMINISM ANCHOR (D-12 / ING-03): Faker and numpy are EXACT == pins. These two
# pins anchor the byte-identical synthetic-data contract recorded alongside
# `synthetic.sha256` (added in a later plan). The whole team must share the same
# Faker patch and the same numpy major to reproduce byte-identical generator output.

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ocean-freight-data-arch"
version = "0.1.0"
description = "Ocean Freight Forwarder data architecture — GCS bronze ingestion (MSDS 683)"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    # --- Determinism anchors (EXACT pins — DO NOT relax to range pins) ---
    # Faker output is NOT stable across patch releases (Faker's own docs), so the
    # patch is pinned exactly. Pin recorded alongside synthetic.sha256 as provenance.
    "Faker==40.1.2",
    # DELIBERATE DEVIATION from CLAUDE.md's prescribed NumPy 2.x: numpy==1.26.4 is the
    # byte-identical determinism anchor per 03-RESEARCH.md A5 / Pitfall 4. The team must
    # share one numpy major to get byte-identical default_rng draws; the locally
    # verified + frozen version is 1.26.4. KEEP THIS PIN (do not bump to 2.x).
    "numpy==1.26.4",
    # --- Support libraries ---
    # NOTE (Phase 5 / 05-02): adding apache-airflow[google]==3.0.6 forces installation
    # via the Airflow constraints file (constraints-3.0.6/constraints-3.12.txt), the only
    # supported reproducible Airflow install path (~600 transitive deps). The constraints
    # set pins pyarrow / pandas / google-cloud-storage, so these are relaxed to >= ranges
    # that the constraints resolve (pyarrow 18.1.0, pandas 2.1.4, google-cloud-storage 2.19.0
    # as of 2026-06-15). The Faker==/numpy== EXACT determinism anchors above are UNAFFECTED
    # by the constraints (both held) and MUST stay exact — they alone anchor synthetic.sha256.
    "pyarrow>=16.1.0",
    "google-cloud-storage>=2.19.0",
    "pandas>=2.1.4",
    "requests>=2.32.3",
    # shapely: latest acceptable (optional WKB decode for AIS bbox filtering)
    "shapely",
    # --- Phase 5: warehouse orchestration + BigQuery load (D-01 plain Airflow) ---
    # Plain Apache Airflow 3.0 (NOT Cloud Composer, D-01) — Composer-portable
    # standard operators only (D-01a). Installed via the Airflow constraints file;
    # see the install note below. The Google provider is pulled by the [google]
    # extra and pinned exactly to the constraints-resolved version (Pitfall 7 / A2).
    "apache-airflow[google]==3.0.6",
    "apache-airflow-providers-google==17.1.0",  # constraints-3.0.6 resolved pin (A2)
    "google-cloud-bigquery",
    "db-dtypes",
    # --- Phase 6: graph store (first graph deps; prior-repo pins, 06-01 Task 1) ---
    # python-arango EXACT == 8.3.2 prior-repo pin (06-RESEARCH § Standard Stack / A6):
    # the driver targeting the managed ArangoDB 3.12.x cluster HTTP API.
    "python-arango==8.3.2",
    # networkx unpinned (prior-repo convention) — client-side criticality FALLBACK
    # path (GAE server-side is primary per the Phase-6 correction).
    "networkx",
    # python-dotenv loads the gitignored repo-root .env carrying the ARANGO_* creds.
    "python-dotenv",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.hatch.build.targets.wheel]
packages = ["lib", "scripts", "ingest", "data_gen", "silver"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]
